Fixed header alignment

--- a/NextGen from PSD/CSS/main.css
+++ b/NextGen from PSD/CSS/main.css
@@ -17,7 +17,7 @@ nav {
 	background-color: #f7f7f7;
 	font-family: 'Lato', sans-serif;
 	color: #545454;
-	box-shadow: 5px 5px 2.5px #888888;
+	box-shadow: 0px 16px 12px -12px #888888;
 }
 
 nav ul {
@@ -47,6 +47,7 @@ h1 {
 	font-weight: normal;
 	color: #b6b6b6;
 	font-size: 48px;
+	margin-top: 22px;
 }
 
 h2 {
@@ -82,6 +83,7 @@ p {
 	background-image: url("../Images/iphone.png");
 	background-repeat: no-repeat;
 	margin-bottom: 40px;
+	box-shadow: 0px 4px 3px -3px silver;
 }
 
 .intro h3 {
@@ -141,6 +143,13 @@ p {
 	background-position: right;
 	background-size: 300px 300px;
 	border-radius: 10px;
+	box-shadow: 0px 16px 12px -12px gray;
+
+}
+
+.whyus .subtitlewhy {
+	float: left;
+	display: inline;
 }
 
 .whyus h1 {
@@ -154,7 +163,10 @@ p {
 .whyus h2 {
 	float: left;
 	margin-right: 10px;
+	margin-top: 32px;
 	display: inline;
+	height: 57px;
+	padding: 0;
 }
 
 .whyus p {
@@ -191,9 +203,10 @@ p {
 	margin-left: -27px;
 }
 
-.howto #howtoicon {
+.howto .howtoheader #howtoicon {
 	display: inline-block;
-	margin-bottom: 10px;
+	margin-bottom: 0px;
+	margin-top: 20px;
 }
 
 .howto h1 {
@@ -202,6 +215,7 @@ p {
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-bottom: 10px;
+	margin-top: 10px;
 }
 
 .howto p {
